--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -9,7 +9,7 @@ body {
     color: #333;
     line-height: 1.5em;
     padding: 25px;
-    background-color:#888;
+    background-color:rgb(236, 236, 236);
 }
 
 img {
