--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -17,3 +17,24 @@ img {
 }
 
 /* Voeg jouw css hieraan toe */
+.content{
+    -webkit-box-shadow: 0px 0px 78px -14px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 78px -14px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 78px -14px rgba(0,0,0,0.75);
+    box-sizing: border-box;
+    padding:5%;
+    margin:0px auto;
+    max-width:1000px;
+    background-color:#fff;
+    }
+.title{
+    box-sizing: border-box;
+    padding:5%;
+    margin:0px auto;
+    max-width:1000px;
+}
+
+
+.content + .content{
+    margin-top: 5%;
+}
