--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -38,3 +38,84 @@ img {
 .content + .content{
     margin-top: 5%;
 }
+#h1{
+    font-family:'Futura PT Cond';
+    font-size:2.5em;
+}
+#h2{
+    font-family:'Source Sans Pro';
+    font-size:1.5em;
+}
+#p{
+    font-family:'Source Sans Pro Light';
+    font-size:14px;
+}
+.bijschrift{
+    font-size:12px;
+}
+#foto{
+    transition:1s;
+    margin:0px auto;
+    margin-top:5%;
+    width:500px;
+    height:50vh;
+    background-image: url('../images/foto2.jpeg');
+    background-size: contain;
+}
+#foto:hover{
+    transition:1s;
+    margin:0px auto;
+    margin-top:5%;
+    width:500px;
+    height:50vh;
+    background-image: url('../images/foto1.jpg');
+    background-size: contain;
+}
+#button{
+    width:200px;
+    margin:0px auto;
+    margin-left:38%;
+    margin-top:2%;
+    padding:2%;
+    color:#fff;
+    background: #1e5799; /* Old browsers */
+    background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    transition: all 0.4s ease;
+
+}
+#button:hover{
+    background: #7db9e8; /* Old browsers */
+background: -moz-linear-gradient(top, #7db9e8 0%, #207cca 49%, #2989d8 50%, #1e5799 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #7db9e8 0%,#207cca 49%,#2989d8 50%,#1e5799 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #7db9e8 0%,#207cca 49%,#2989d8 50%,#1e5799 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
+.colorBox{
+    width:200px;
+    height: 40vh;
+    display:inline-block;
+}
+.colorBox + .colorBox{
+    margin-left:5px;
+}
+.colorBox p{
+    color:#fff;
+    margin:0px auto;
+    margin-left:32%;
+    margin-top:80%;
+}
+
+#colorOne{
+    background-color:#3e92b3;
+}
+#colorTwo{
+    background-color:#3f6a75;
+}
+#colorThree{
+    background-color: #408396;
+}
+#colorFour{
+    background-color: #4470b6;
+}
